avoid overflow with large number of single-line annotations

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/console/consoleStyles.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/console/consoleStyles.css
@@ -154,10 +154,8 @@
 	color: #888888;
 }
 
-
-
 .ace_tooltip {
 	max-width: 400px;
 	max-height: 300px;
-}
+	overflow: hidden;
 }
